The menace that haunted this place is gone Sine transitions are gone! Few bonuses: translated to Portuguese, updated to 1.16.2-pre1, somewhat prepare for release

--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -7,18 +7,18 @@
 	"config.okzoomer.cinematic_camera.multiplied": "Multiplied",
 	"config.okzoomer.cinematic_camera.tooltip": "Defines the cinematic camera while zooming.",
 	"config.okzoomer.cinematic_camera.tooltip.off": "\"Off\" disables the cinematic camera.",
-	"config.okzoomer.cinematic_camera.tooltip.vanilla": "\"Smooth\" uses Vanilla's cinematic camera.",
+	"config.okzoomer.cinematic_camera.tooltip.vanilla": "\"Vanilla\" uses Vanilla's cinematic camera.",
 	"config.okzoomer.cinematic_camera.tooltip.multiplied": "\"Multiplied\" is a multiplied variant of \"Vanilla\".",
 	"config.okzoomer.reduce_sensitivity": "Reduce Sensitivity",
 	"config.okzoomer.reduce_sensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
 	"config.okzoomer.zoom_transition": "Zoom Transition",
 	"config.okzoomer.zoom_transition.off": "Off",
 	"config.okzoomer.zoom_transition.smooth": "Smooth",
-	"config.okzoomer.zoom_transition.sine": "Sine",
+	"config.okzoomer.zoom_transition.linear": "Linear",
 	"config.okzoomer.zoom_transition.tooltip": "Adds transitions between zooms.",
 	"config.okzoomer.zoom_transition.tooltip.off": "\"Off\" disables transitions.",
 	"config.okzoomer.zoom_transition.tooltip.smooth": "\"Smooth\" replicates Vanilla's dynamic FOV.",
-	"config.okzoomer.zoom_transition.tooltip.sine": "\"Sine\" applies the transition with a sine function.",
+	"config.okzoomer.zoom_transition.tooltip.linear": "\"Linear\" removes the smoothness.",
 	"config.okzoomer.zoom_mode": "Zoom Mode",
 	"config.okzoomer.zoom_mode.hold": "Hold",
 	"config.okzoomer.zoom_mode.toggle": "Toggle",
@@ -60,6 +60,10 @@
 	"config.okzoomer.reset_to_preset.tooltip.default": "\"Default\" resets to the default.",
 	"config.okzoomer.reset_to_preset.tooltip.classic": "\"Classic\" makes the mod imitate OptiFine's zoom.",
 	"config.okzoomer.reset_to_preset.tooltip.persistent": "\"Persistent\" is based on the \"Persistent\" zoom mode.",
+	"toast.okzoomer.title": "Ok Zoomer",
+	"toast.okzoomer.disable_zoom": "Disabled zooming",
+	"toast.okzoomer.disable_zoom_scrolling": "Disabled zoom scrolling",
+	"toast.okzoomer.force_classic_preset": "Forced the Classic preset",
 	"key.okzoomer.category": "Zoom",
 	"key.okzoomer.decrease_zoom": "Decrease Zoom",
 	"key.okzoomer.increase_zoom": "Increase Zoom",
