--- a/src/main/resources/assets/okzoomer/lang/pt_br.json
+++ b/src/main/resources/assets/okzoomer/lang/pt_br.json
@@ -1,11 +1,72 @@
 {
-	"config.okzoomer.option.cinematic_camera": "Câmera cinemática",
-	"config.okzoomer.option.cinematic_camera.tooltip": "Ativa a câmera cinemática enquanto dar zoom.",
-	"config.okzoomer.option.cinematic_camera.off": "Desligado",
-	"config.okzoomer.option.cinematic_camera.vanilla": "Vanilla",
-	"config.okzoomer.option.cinematic_camera.multiplied": "Multiplicado",
 	"config.okzoomer.title": "Configurações do Ok Zoomer",
+	"config.okzoomer.category.features": "Funções",
+	"config.okzoomer.cinematic_camera": "Câmera cinemática",
+	"config.okzoomer.cinematic_camera.off": "Desligada",
+	"config.okzoomer.cinematic_camera.vanilla": "Vanilla",
+	"config.okzoomer.cinematic_camera.multiplied": "Multiplicada",
+	"config.okzoomer.cinematic_camera.tooltip": "Define a câmera cinemática durante o zoom.",
+	"config.okzoomer.cinematic_camera.tooltip.off": "\"Desligada\" desliga a câmera cinemática.",
+	"config.okzoomer.cinematic_camera.tooltip.vanilla": "\"Vanilla\" usa a câmera cinemática do próprio jogo.",
+	"config.okzoomer.cinematic_camera.tooltip.multiplied": "\"Multiplicada\" é uma versão multiplicada de \"Vanilla\".",
+	"config.okzoomer.reduce_sensitivity": "Reduzir sensibilidade",
+	"config.okzoomer.reduce_sensitivity.tooltip": "Reduz a sensibilidade do mouse durante o zoom.",
+	"config.okzoomer.zoom_transition": "Transição do zoom",
+	"config.okzoomer.zoom_transition.off": "Desligado",
+	"config.okzoomer.zoom_transition.smooth": "Suave",
+	"config.okzoomer.zoom_transition.linear": "Linear",
+	"config.okzoomer.zoom_transition.tooltip": "Adiciona transições no meio dos zooms.",
+	"config.okzoomer.zoom_transition.tooltip.off": "\"Desligado\" desliga as transições.",
+	"config.okzoomer.zoom_transition.tooltip.smooth": "\"Suave\" replica o campo de visão suave do jogo.",
+	"config.okzoomer.zoom_transition.tooltip.linear": "\"Linear\" remove a suavez da transição.",
+	"config.okzoomer.zoom_mode": "Modo do zoom",
+	"config.okzoomer.zoom_mode.hold": "Segurar",
+	"config.okzoomer.zoom_mode.toggle": "Alternar",
+	"config.okzoomer.zoom_mode.persistent": "Persistente",
+	"config.okzoomer.zoom_mode.tooltip": "O comportamento da tecla de zoom.",
+	"config.okzoomer.zoom_mode.tooltip.hold": "\"Segurar\" requer a tecla de zoom a ser apertado.",
+	"config.okzoomer.zoom_mode.tooltip.toggle": "\"Alternar\" faz com que a tecla alterne o zoom.",
+	"config.okzoomer.zoom_mode.tooltip.persistent": "\"Persistente\" faz o zoom permanente.",
+	"config.okzoomer.zoom_scrolling": "Rolagem de zoom",
+	"config.okzoomer.zoom_scrolling.tooltip": "Permite aumentar ou diminiur o zoom com a rolagem do mouse.",
+	"config.okzoomer.extra_keybinds": "Teclas extra",
+	"config.okzoomer.extra_keybinds.tooltip": "Adiciona teclas de manipulação do zoom junto com a tecla do zoom.",
+	"config.okzoomer.extra_keybinds.tooltip.warning": "Uma reiniciação será necessária para aplicar as mudanças.",
+	"config.okzoomer.category.values": "Valores",
+	"config.okzoomer.zoom_divisor": "Divisor de zoom",
+	"config.okzoomer.zoom_divisor.tooltip": "O divisor aplicado no multiplicador de zoom do campo de visão.",
+	"config.okzoomer.minimum_zoom_divisor": "Divisor de zoom mínimo",
+	"config.okzoomer.minimum_zoom_divisor.tooltip": "O valor mínimo que o divisor pode ser rolado.",
+	"config.okzoomer.maximum_zoom_divisor": "Divisor de zoom máximo",
+	"config.okzoomer.maximum_zoom_divisor.tooltip": "O valor máximo que o divisor pode ser rolado.",
+	"config.okzoomer.cinematic_multiplier": "Multiplicador cinemático",
+	"config.okzoomer.cinematic_multiplier.tooltip": "O multiplicador utilizado na câmera cinemática multiplicada.",
+	"config.okzoomer.smooth_multiplier": "Multiplicador suave",
+	"config.okzoomer.smooth_multiplier.tooltip": "O multiplicador usado para transições suaves.",
+	"config.okzoomer.scroll_step": "Passo de rolagem",
+	"config.okzoomer.scroll_step.tooltip.1": "O número aplicado no divisor de zoom pela rolagem de zoom.",
+	"config.okzoomer.scroll_step.tooltip.2": "Usado quando o divisor de zoom é maior do que o ponto inicial.",
+	"config.okzoomer.lesser_scroll_step": "Passo de rolagem menor",
+	"config.okzoomer.lesser_scroll_step.tooltip.1": "O número aplicado no divisor de zoom pela rolagem de zoom.",
+	"config.okzoomer.lesser_scroll_step.tooltip.2": "Usado quando o divisor de zoom é menor do que o ponto inicial.",
+	"config.okzoomer.category.presets": "Predefinições",
+	"config.okzoomer.reset_to_preset": "Reiniciar para predefinição",
+	"config.okzoomer.reset_to_preset.none": "Nenhuma",
+	"config.okzoomer.reset_to_preset.default": "Padrão",
+	"config.okzoomer.reset_to_preset.classic": "Clássica",
+	"config.okzoomer.reset_to_preset.persistent": "Persistente",
+	"config.okzoomer.reset_to_preset.tooltip": "Reinicia a configuração de uma forma específica ao salvar.",
+	"config.okzoomer.reset_to_preset.tooltip.none": "\"Nenhuma\" mantém a configuração intacta.",
+	"config.okzoomer.reset_to_preset.tooltip.default": "\"Padrão\" reinicia para os padrões.",
+	"config.okzoomer.reset_to_preset.tooltip.classic": "\"Clássica\" faz o zoom imitar o zoom do OptiFine.",
+	"config.okzoomer.reset_to_preset.tooltip.persistent": "\"Persistente\" é baseado no modo de zoom \"Persistente\".",
+	"toast.okzoomer.title": "Ok Zoomer",
+	"toast.okzoomer.disable_zoom": "Zoom desativado",
+	"toast.okzoomer.disable_zoom_scrolling": "Rolagem de zoom desativado",
+	"toast.okzoomer.force_classic_preset": "Predefinição clássica forçada",
+	"key.okzoomer.category": "Zoom",
 	"key.okzoomer.decrease_zoom": "Diminuir zoom",
 	"key.okzoomer.increase_zoom": "Aumentar zoom",
+	"key.okzoomer.reset_zoom": "Reiniciar zoom",
 	"key.okzoomer.zoom": "Zoom"
 }
