Being development on a beta Changes: Ported to 1.16.2-rc1, added backwards-compat to legacy Ok Zoomer, added minimum and maximum linear steps

--- a/src/main/resources/assets/okzoomer/lang/pt_br.json
+++ b/src/main/resources/assets/okzoomer/lang/pt_br.json
@@ -39,16 +39,20 @@
 	"config.okzoomer.minimum_zoom_divisor.tooltip": "O valor mínimo que o divisor pode ser rolado.",
 	"config.okzoomer.maximum_zoom_divisor": "Divisor de zoom máximo",
 	"config.okzoomer.maximum_zoom_divisor.tooltip": "O valor máximo que o divisor pode ser rolado.",
-	"config.okzoomer.cinematic_multiplier": "Multiplicador cinemático",
-	"config.okzoomer.cinematic_multiplier.tooltip": "O multiplicador utilizado na câmera cinemática multiplicada.",
-	"config.okzoomer.smooth_multiplier": "Multiplicador suave",
-	"config.okzoomer.smooth_multiplier.tooltip": "O multiplicador usado para transições suaves.",
 	"config.okzoomer.scroll_step": "Passo de rolagem",
 	"config.okzoomer.scroll_step.tooltip.1": "O número aplicado no divisor de zoom pela rolagem de zoom.",
 	"config.okzoomer.scroll_step.tooltip.2": "Usado quando o divisor de zoom é maior do que o ponto inicial.",
 	"config.okzoomer.lesser_scroll_step": "Passo de rolagem menor",
 	"config.okzoomer.lesser_scroll_step.tooltip.1": "O número aplicado no divisor de zoom pela rolagem de zoom.",
 	"config.okzoomer.lesser_scroll_step.tooltip.2": "Usado quando o divisor de zoom é menor do que o ponto inicial.",
+	"config.okzoomer.cinematic_multiplier": "Multiplicador cinemático",
+	"config.okzoomer.cinematic_multiplier.tooltip": "O multiplicador utilizado na câmera cinemática multiplicada.",
+	"config.okzoomer.smooth_multiplier": "Multiplicador suave",
+	"config.okzoomer.smooth_multiplier.tooltip": "O multiplicador usado para transições suaves.",
+	"config.okzoomer.minimum_linear_step": "Passo linear mínimo",
+	"config.okzoomer.minimum_linear_step.tooltip": "O valor mínimo que o passo da transição linear pode alcançar.",
+	"config.okzoomer.maximum_linear_step": "Passo linear máximo",
+	"config.okzoomer.maximum_linear_step.tooltip": "O valor máximo que o passo da transição linear pode alcançar.",
 	"config.okzoomer.category.presets": "Predefinições",
 	"config.okzoomer.reset_to_preset": "Reiniciar para predefinição",
 	"config.okzoomer.reset_to_preset.none": "Nenhuma",
