--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -37,16 +37,20 @@
 	"config.okzoomer.minimum_zoom_divisor.tooltip": "The minimum value that you can scroll down.",
 	"config.okzoomer.maximum_zoom_divisor": "Maximum Zoom Divisor",
 	"config.okzoomer.maximum_zoom_divisor.tooltip": "The maximum value that you can scroll up.",
-	"config.okzoomer.cinematic_multiplier": "Cinematic Multiplier",
-	"config.okzoomer.cinematic_multiplier.tooltip": "The multiplier used for the multiplied cinematic camera.",
-	"config.okzoomer.smooth_multiplier": "Smooth Multiplier",
-	"config.okzoomer.smooth_multiplier.tooltip": "The multiplier used for smooth transitions.",
 	"config.okzoomer.scroll_step": "Scroll Step",
 	"config.okzoomer.scroll_step.tooltip.1": "The number which is de/incremented by zoom scrolling.",
 	"config.okzoomer.scroll_step.tooltip.2": "Used when the zoom divisor is above the starting point.",
 	"config.okzoomer.lesser_scroll_step": "Lesser Scroll Step",
 	"config.okzoomer.lesser_scroll_step.tooltip.1": "The number which is de/incremented by zoom scrolling.",
 	"config.okzoomer.lesser_scroll_step.tooltip.2": "Used when the zoom divisor is below the starting point.",
+	"config.okzoomer.cinematic_multiplier": "Cinematic Multiplier",
+	"config.okzoomer.cinematic_multiplier.tooltip": "The multiplier used for the multiplied cinematic camera.",
+	"config.okzoomer.smooth_multiplier": "Smooth Multiplier",
+	"config.okzoomer.smooth_multiplier.tooltip": "The multiplier used for smooth transitions.",
+	"config.okzoomer.minimum_linear_step": "Minimum Linear Step",
+	"config.okzoomer.minimum_linear_step.tooltip": "The minimum value which the linear transition step can reach.",
+	"config.okzoomer.maximum_linear_step": "Maximum Linear Step",
+	"config.okzoomer.maximum_linear_step.tooltip": "The maximum value which the linear transition step can reach.",
 	"config.okzoomer.category.presets": "Presets",
 	"config.okzoomer.reset_to_preset": "Reset to Preset",
 	"config.okzoomer.reset_to_preset.none": "None",
