Add more features and polish a little Changes: Updated to 1.16.2-rc2, Technical -> Tweaks, Added "Reset Zoom with Mouse" and "Unbind Conflicting Key", more owos

--- a/src/main/resources/assets/okzoomer/lang/pt_br.json
+++ b/src/main/resources/assets/okzoomer/lang/pt_br.json
@@ -53,6 +53,12 @@
 	"config.okzoomer.minimum_linear_step.tooltip": "O valor mínimo que o passo da transição linear pode alcançar.",
 	"config.okzoomer.maximum_linear_step": "Passo linear máximo",
 	"config.okzoomer.maximum_linear_step.tooltip": "O valor máximo que o passo da transição linear pode alcançar.",
+	"config.okzoomer.category.tweaks": "Ajustes",
+	"config.okzoomer.reset_zoom_with_mouse": "Reiniciar zoom com mouse",
+	"config.okzoomer.reset_zoom_with_mouse.tooltip": "Permite reiniciar o zoom com o botão do meio do mouse.",
+	"config.okzoomer.unbind_conflicting_key": "Corrigir tecla conflitante",
+	"config.okzoomer.unbind_conflicting_key.tooltip.1": "Se ativado, a tecla \"Salvar barra rápida\" será",
+	"config.okzoomer.unbind_conflicting_key.tooltip.2": "anulada caso tenha conflito com a tecla de zoom.",
 	"config.okzoomer.category.presets": "Predefinições",
 	"config.okzoomer.reset_to_preset": "Reiniciar para predefinição",
 	"config.okzoomer.reset_to_preset.none": "Nenhuma",
