Spare owo from its destruction

--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -52,11 +52,13 @@
 	"config.okzoomer.maximum_linear_step": "Maximum Linear Step",
 	"config.okzoomer.maximum_linear_step.tooltip": "The maximum value which the linear transition step can reach.",
 	"config.okzoomer.category.tweaks": "Tweaks",
-	"config.okzoomer.reset_zoom_with_mouse": "Reset Zoom With Mouse",
+	"config.okzoomer.reset_zoom_with_mouse": "Reset Zoom with Mouse",
 	"config.okzoomer.reset_zoom_with_mouse.tooltip": "Allows for resetting the zoom with the middle mouse button.",
 	"config.okzoomer.unbind_conflicting_key": "Unbind Conflicting Key",
 	"config.okzoomer.unbind_conflicting_key.tooltip.1": "If enabled, the \"Save Toolbar Activator\" keybind will be",
 	"config.okzoomer.unbind_conflicting_key.tooltip.2": "unbound if there's a conflict with the zoom key.",
+	"config.okzoomer.print_owo_on_start": "Print owo on Start",
+	"config.okzoomer.print_owo_on_start.tooltip": "Prints a random owo in the console when the game starts.",
 	"config.okzoomer.category.presets": "Presets",
 	"config.okzoomer.reset_to_preset": "Reset to Preset",
 	"config.okzoomer.reset_to_preset.none": "None",
