--- a/src/main/resources/assets/okzoomer/lang/pt_br.json
+++ b/src/main/resources/assets/okzoomer/lang/pt_br.json
@@ -57,6 +57,8 @@
 	"config.okzoomer.unbind_conflicting_key": "Corrigir tecla conflitante",
 	"config.okzoomer.unbind_conflicting_key.tooltip.1": "Se ativado, a tecla \"Salvar barra rápida\" será",
 	"config.okzoomer.unbind_conflicting_key.tooltip.2": "anulada caso tenha conflito com a tecla de zoom.",
+	"config.okzoomer.print_owo_on_start": "Imprimir owo ao iniciar",
+	"config.okzoomer.print_owo_on_start.tooltip": "Imprime um owo aleatório no console quando o jogo iniciar",
 	"config.okzoomer.category.presets": "Predefinições",
 	"config.okzoomer.reset_to_preset": "Reiniciar para predefinição",
 	"config.okzoomer.reset_to_preset.none": "Nenhuma",
