Add zoom overlays

--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -30,6 +30,10 @@
 	"config.okzoomer.extra_keybinds": "Extra Keybinds",
 	"config.okzoomer.extra_keybinds.tooltip": "Adds zoom manipulation keys along with the zoom key.",
 	"config.okzoomer.extra_keybinds.tooltip.warning": "A restart will be required in order to apply the changes.",
+	"config.okzoomer.zoom_overlay": "Zoom Overlay",
+	"config.okzoomer.zoom_overlay.tooltip.1": "Adds an overlay in the screen during zoom.",
+	"config.okzoomer.zoom_overlay.tooltip.2": "The overlay texture can be found in:",
+	"config.okzoomer.zoom_overlay.tooltip.3": "assets/okzoomer/textures/misc/zoom_overlay.png",
 	"config.okzoomer.category.values": "Values",
 	"config.okzoomer.zoom_divisor": "Zoom Divisor",
 	"config.okzoomer.zoom_divisor.tooltip": "The divisor applied to the FOV's zoom multiplier.",
