--- a/src/main/resources/assets/okzoomer/lang/pt_br.json
+++ b/src/main/resources/assets/okzoomer/lang/pt_br.json
@@ -30,6 +30,10 @@
 	"config.okzoomer.extra_keybinds": "Teclas extra",
 	"config.okzoomer.extra_keybinds.tooltip": "Adiciona teclas de manipulação do zoom junto com a tecla do zoom.",
 	"config.okzoomer.extra_keybinds.tooltip.warning": "Uma reiniciação será necessária para aplicar as mudanças.",
+	"config.okzoomer.zoom_overlay": "Sobreposição de zoom",
+	"config.okzoomer.zoom_overlay.tooltip.1": "Adiciona uma sobreposição na tela durante o zoom.",
+	"config.okzoomer.zoom_overlay.tooltip.2": "A textura da sobreposição pode ser encontrada em:",
+	"config.okzoomer.zoom_overlay.tooltip.3": "assets/okzoomer/textures/misc/zoom_overlay.png",
 	"config.okzoomer.category.values": "Valores",
 	"config.okzoomer.zoom_divisor": "Divisor de zoom",
 	"config.okzoomer.zoom_divisor.tooltip": "O divisor aplicado no multiplicador de zoom do campo de visão.",
