Bring back zoom keybinds

--- a/src/main/resources/assets/fabrizoom/lang/en_us.json
+++ b/src/main/resources/assets/fabrizoom/lang/en_us.json
@@ -1,3 +1,7 @@
 {
-
+  "category.fabrizoom.keybinds": "FabriZoom",
+  "key.fabrizoom.zoom": "Zoom",
+  "key.fabrizoom.increase": "Increase Zoom",
+  "key.fabrizoom.decrease": "Decrease Zoom",
+  "key.fabrizoom.reset": "Reset Zoom"
 }
