--- a/src/main/resources/assets/fabrizoom/lang/en_us.json
+++ b/src/main/resources/assets/fabrizoom/lang/en_us.json
@@ -3,5 +3,59 @@
   "key.fabrizoom.zoom": "Zoom",
   "key.fabrizoom.increase": "Increase Zoom",
   "key.fabrizoom.decrease": "Decrease Zoom",
-  "key.fabrizoom.reset": "Reset Zoom"
+  "key.fabrizoom.reset": "Reset Zoom",
+
+  "transition.fabrizoom.linear": "Linear",
+  "transition.fabrizoom.smooth": "Smooth",
+  "transition.fabrizoom.none": "None",
+
+  "config.fabrizoom.reset": "Reset",
+  "config.fabrizoom.reset.tooltip": "Reset all options to defaults",
+  "config.fabrizoom.cancel": "Cancel",
+  "config.fabrizoom.cancel.tooltip": "Exit and discard changes",
+  "config.fabrizoom.apply": "Apply",
+  "config.fabrizoom.apply.tooltip": "Apply changes and exit",
+
+  "config.fabrizoom.title": "FabriZoom Config",
+
+  "category.fabrizoom.general": "§lGeneral Settings",
+  "config.fabrizoom.general": "Zoom Settings",
+  "config.fabrizoom.zoomdivisor": "Zoom Divisor",
+  "config.fabrizoom.zoomdivisor.tooltip": "The amount to initially zoom in",
+
+  "config.fabrizoom.minzoomdivisor": "Minimum Zoom Divisor",
+  "config.fabrizoom.minzoomdivisor.tooltip": "The minimum amount of zoom allowed",
+  "config.fabrizoom.maxzoomdivisor": "Maximum Zoom Divisor",
+  "config.fabrizoom.maxzoomdivisor.tooltip": "The maximum amount of zoom allowed",
+
+
+  "category.fabrizoom.mouse": "§lMouse Settings",
+  "category.fabrizoom.mouse.description": "Controls the mouse while zooming",
+
+  "config.fabrizoom.mouse.normal.title": "Normal Mode (Default)",
+  "config.fabrizoom.mouse.sensitivity": "Mouse Sensitivity",
+  "config.fabrizoom.mouse.sensitivity.tooltip": "Amount to reduce mouse sensitivity by while zooming. Higher is more sensitive",
+
+  "config.fabrizoom.mouse.cinematic.title": "Cinematic Camera Mode",
+  "config.fabrizoom.mouse.cinematic": "Cinematic Camera",
+  "config.fabrizoom.mouse.cinematic.tooltip": "Whether to apply a cinematic camera effect to the mouse while zooming",
+  "config.fabrizoom.mouse.cinematicmultiplier": "Cinematic Camera Multiplier",
+  "config.fabrizoom.mouse.cinematicmultiplier.tooltip": "Amount of cinematic camera effect. Lower is stronger",
+
+
+  "category.fabrizoom.transition": "§lZoom Transition",
+  "category.fabrizoom.transition.description": "The transition to and from zooming",
+
+  "config.fabrizoom.transition": "Zoom Transition",
+  "config.fabrizoom.transition.linear": "Linear Transition Settings",
+  "config.fabrizoom.transition.smooth": "Smooth Transition Settings",
+  "config.fabrizoom.transition.tooltip": "The transition to and from zooming",
+
+  "config.fabrizoom.linearstep.min": "Minimum Linear Step",
+  "config.fabrizoom.linearstep.min.tooltip": "The minimum linear step for linear transitions",
+  "config.fabrizoom.linearstep.max": "Maximum Linear Step",
+  "config.fabrizoom.linearstep.max.tooltip": "The maximum linear step for linear transitions",
+
+  "config.fabrizoom.smoothmultiplier": "Smooth Transition Multiplier",
+  "config.fabrizoom.smoothmultiplier.tooltip": "Multiplier for smooth transitions. Lower is stronger"
 }
