Add toggleable spyglass noise on zoom

--- a/src/main/resources/assets/fabrizoom/lang/en_us.json
+++ b/src/main/resources/assets/fabrizoom/lang/en_us.json
@@ -43,6 +43,11 @@
   "config.fabrizoom.maxzoomdivisor": "Maximum Zoom Divisor",
   "config.fabrizoom.maxzoomdivisor.tooltip": "The maximum amount of zoom allowed",
 
+
+  "config.fabrizoom.zoomsound": "Zoom Sound",
+  "config.fabrizoom.zoomsound.tooltip": "Whether to play the spyglass sound on zoom",
+
+
   "config.fabrizoom.overlay": "Zoom Overlay",
   "config.fabrizoom.overlay.tooltip": "Toggles the zoom vignette overlay",
 
