--- a/src/main/resources/assets/fabrizoom/lang/en_us.json
+++ b/src/main/resources/assets/fabrizoom/lang/en_us.json
@@ -22,19 +22,8 @@
   "config.fabrizoom.preset.apply": "Apply Preset",
   "config.fabrizoom.preset.apply.tooltip": "Applies the selected Preset",
 
-  "config.fabrizoom.reset": "Reset",
-  "config.fabrizoom.reset.tooltip": "Reset all options to defaults",
-  "config.fabrizoom.cancel": "Cancel",
-  "config.fabrizoom.cancel.tooltip": "Exit and discard changes",
-  "config.fabrizoom.apply": "Apply",
-  "config.fabrizoom.apply.tooltip": "Apply changes and exit",
+  "category.fabrizoom.basic": "Basic",
 
-  "config.fabrizoom.title": "FabriZoom Config",
-
-  "category.fabrizoom.basic": "§lBasic",
-
-  "category.fabrizoom.general": "§nZoom Settings",
-  "config.fabrizoom.general": "Zoom Settings",
   "config.fabrizoom.zoomdivisor": "Zoom Divisor",
   "config.fabrizoom.zoomdivisor.tooltip": "The amount to initially zoom in",
 
@@ -54,10 +43,7 @@
   "config.fabrizoom.scrolling": "Scroll to Zoom",
   "config.fabrizoom.scrolling.tooltip": "Whether scrolling while zooming should change the zoom amount",
 
-  "category.fabrizoom.advanced": "§lAdvanced",
-
-  "category.fabrizoom.mouse": "§nMouse Settings",
-  "category.fabrizoom.mouse.description": "Controls the mouse while zooming",
+  "category.fabrizoom.advanced": "Advanced",
 
   "config.fabrizoom.mouse.normal.title": "Normal Mode (Default)",
   "config.fabrizoom.mouse.sensitivity": "Mouse Sensitivity",
@@ -68,10 +54,6 @@
   "config.fabrizoom.mouse.cinematic.tooltip": "Whether to apply a cinematic camera effect to the mouse while zooming",
   "config.fabrizoom.mouse.cinematicmultiplier": "Cinematic Camera Multiplier",
   "config.fabrizoom.mouse.cinematicmultiplier.tooltip": "Amount of cinematic camera effect. Lower is stronger",
-
-
-  "category.fabrizoom.transition": "§nZoom Transition",
-  "category.fabrizoom.transition.description": "The transition to and from zooming",
 
   "config.fabrizoom.transition": "Zoom Transition",
   "config.fabrizoom.transition.linear": "Linear Transition Settings",
